:sparkles: unique-binary-search-trees-ii

--- a/README.adoc
+++ b/README.adoc
@@ -223,6 +223,7 @@ a|
 a|
 * link:{package}/BinaryTreeInorderTraversal.java[binary-tree-inorder-traversal]
 * link:{package}/BSTIterator.java[binary-search-tree-iterator]
+* link:{package}/UniqueBinarySearchTreesII.java[unique-binary-search-trees-ii]
 |
 
 | Heap
@@ -252,6 +253,7 @@ a|
 * link:{package}/MinimumPathSum.java[minimum-path-sum]
 * link:{package}/DecodeWays.java[decode-ways]
 * link:{package}/UglyNumberII.java[ugly-number-ii]
+* link:{package}/UniqueBinarySearchTreesII.java[unique-binary-search-trees-ii]
 |
 
 | Greedy
