--- a/README.adoc
+++ b/README.adoc
@@ -182,6 +182,7 @@ a|
 * link:{package}/RemoveDuplicateLetters.java[remove-duplicate-letters]
 * link:{package}/BinaryTreeZigzagLevelOrderTraversal.java[binary-tree-zigzag-level-order-traversal]
 * link:{package}/BinaryTreePreorderTraversal.java[binary-tree-preorder-traversal]
+* link:{package}/BinaryTreePostorderTraversal.java[binary-tree-postorder-traversal]
 |
 
 | HashTable
@@ -240,6 +241,7 @@ a|
 * link:{package}/PopulatingNextRightPointersInEachNodeII.java[populating-next-right-pointers-in-each-node-ii]
 * link:{package}/SumRootToLeafNumbers.java[sum-root-to-leaf-numbers]
 * link:{package}/BinaryTreePreorderTraversal.java[binary-tree-preorder-traversal]
+* link:{package}/BinaryTreePostorderTraversal.java[binary-tree-postorder-traversal]
 |
 
 | Heap
