--- a/README.adoc
+++ b/README.adoc
@@ -243,6 +243,7 @@ a|
 * link:{package}/BinaryTreePreorderTraversal.java[binary-tree-preorder-traversal]
 * link:{package}/BinaryTreePostorderTraversal.java[binary-tree-postorder-traversal]
 * link:{package}/BinaryTreeRightSideView.java[binary-tree-right-side-view]
+* link:{package}/CountCompleteTreeNodes.java[count-complete-tree-nodes]
 |
 
 | Heap
@@ -305,6 +306,7 @@ a|
 * link:{package}/FindTheDuplicateNumber.java[find-the-duplicate-number]
 * link:{package}/DivideTwoIntegers.java[divide-two-integers]
 * link:{package}/Powxn.java[powx-n]
+* link:{package}/CountCompleteTreeNodes.java[count-complete-tree-nodes]
 |
 
 | TwoPointers
