--- a/README.adoc
+++ b/README.adoc
@@ -244,6 +244,7 @@ a|
 * link:{package}/BinaryTreePostorderTraversal.java[binary-tree-postorder-traversal]
 * link:{package}/BinaryTreeRightSideView.java[binary-tree-right-side-view]
 * link:{package}/CountCompleteTreeNodes.java[count-complete-tree-nodes]
+* link:{package}/KthSmallestElementInABST.java[kth-smallest-element-in-a-bst]
 |
 
 | Heap
@@ -307,6 +308,7 @@ a|
 * link:{package}/DivideTwoIntegers.java[divide-two-integers]
 * link:{package}/Powxn.java[powx-n]
 * link:{package}/CountCompleteTreeNodes.java[count-complete-tree-nodes]
+* link:{package}/KthSmallestElementInABST.java[kth-smallest-element-in-a-bst]
 |
 
 | TwoPointers
