--- a/README.adoc
+++ b/README.adoc
@@ -262,6 +262,7 @@ a|
 * link:{package}/IntersectionOfTwoArraysII.java[intersection-of-two-arrays-ii]
 * link:{package}/InsertionSortList.java[insertion-sort-list]
 * link:{package}/SortList.java[sort-list]
+* link:{package}/LargestNumber.java[largest-number]
 |
 
 | DP
