--- a/README.adoc
+++ b/README.adoc
@@ -164,6 +164,7 @@ a|
 * link:{package}/MissingNumber.java[missing-number]
 * link:{package}/SingleNumber.java[single-number]
 * link:{package}/PowerOfTwo.java[power-of-two]
+* link:{package}/ReverseBits.java[reverse-bits]
 a|
 * link:{package}/Subsets.java[subsets]
 |
