:sparkles: house-robber

--- a/README.adoc
+++ b/README.adoc
@@ -274,6 +274,7 @@ a|
 a|
 * link:{package}/MaximumSubarray.java[maximum-subarray]
 * link:{package}/BestTimeToBuyAndSellStock.java[best-time-to-buy-and-sell-stock]
+* link:{package}/HouseRobber.java[house-robber]
 a|
 * link:{package}/UniquePaths.java[unique-paths]
 * link:{package}/UniquePathsII.java[unique-paths-ii]
