--- a/README.adoc
+++ b/README.adoc
@@ -38,6 +38,7 @@ a|
 * link:{package}/ThirdMaximumNumber.java[third-maximum-number]
 * link:{package}/FindAllNumbersDisappearedInAnArray.java[find-all-numbers-disappeared-in-an-array]
 * link:{package}/MaxConsecutiveOnes.java[max-consecutive-ones]
+* link:{package}/SummaryRanges.java[summary-ranges]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
