--- a/README.adoc
+++ b/README.adoc
@@ -302,6 +302,7 @@ a|
 * link:{package}/IntersectionOfTwoArraysII.java[intersection-of-two-arrays-ii]
 * link:{package}/Sqrtx.java[sqrtx]
 * link:{package}/ValidPerfectSquare.java[valid-perfect-square]
+* link:{package}/FirstBadVersion.java[first-bad-version]
 a|
 * link:{package}/SearchInRotatedSortedArray.java[search-in-rotated-sorted-array]
 * link:{package}/FindFirstAndLastPositionOfElementInSortedArray.java[find-first-and-last-position-of-element-in-sorted-array]
