:sparkles: permutations-ii

--- a/README.adoc
+++ b/README.adoc
@@ -400,6 +400,7 @@ a|
 * link:{package}/LetterCombinationsOfAPhoneNumber.java[letter-combinations-of-a-phone-number]
 * link:{package}/GenerateParentheses.java[generate-parentheses]
 * link:{package}/Permutations.java[permutations]
+* link:{package}/PermutationsII.java[permutations-ii]
 a|
 * link:{package}/RegularExpressionMatching.java[regular-expression-matching]
 
