:sparkles: fibonacci-number

--- a/README.adoc
+++ b/README.adoc
@@ -40,6 +40,7 @@ a|
 * link:{package}/MaxConsecutiveOnes.java[max-consecutive-ones]
 * link:{package}/SummaryRanges.java[summary-ranges]
 * link:{package}/CanPlaceFlowers.java[can-place-flowers]
+* link:{package}/FibonacciNumber.java[fibonacci-number]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
