--- a/README.adoc
+++ b/README.adoc
@@ -41,6 +41,7 @@ a|
 * link:{package}/SummaryRanges.java[summary-ranges]
 * link:{package}/CanPlaceFlowers.java[can-place-flowers]
 * link:{package}/FibonacciNumber.java[fibonacci-number]
+* link:{package}/PositionsOfLargeGroups.java[positions-of-large-groups]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
