--- a/README.adoc
+++ b/README.adoc
@@ -273,6 +273,7 @@ a|
 |
 a|
 * link:{package}/EvaluateDivision.java[evaluate-division]
+* link:{package}/NumberOfProvinces.java[number-of-provinces]
 |
 
 | Sort
@@ -386,6 +387,7 @@ a|
 * link:{package}/PopulatingNextRightPointersInEachNodeII.java[populating-next-right-pointers-in-each-node-ii]
 * link:{package}/SumRootToLeafNumbers.java[sum-root-to-leaf-numbers]
 * link:{package}/BinaryTreeRightSideView.java[binary-tree-right-side-view]
+* link:{package}/NumberOfProvinces.java[number-of-provinces]
 |
 
 | BreadthFirstSearch
