--- a/README.adoc
+++ b/README.adoc
@@ -73,6 +73,7 @@ a|
 * link:{package}/ConstructBinaryTreeFromInorderAndPostorderTraversal.java[construct-binary-tree-from-inorder-and-postorder-traversal]
 a|
 * link:{package}/MedianOfTwoSortedArrays.java[median-of-two-sorted-arrays]
+* link:{package}/BestTimeToBuyAndSellStockIII.java[best-time-to-buy-and-sell-stock-iii]
 
 | String
 a|
@@ -307,6 +308,7 @@ a|
 * link:{package}/LongestPalindromicSubstring.java[longest-palindromic-substring]
 a|
 * link:{package}/RegularExpressionMatching.java[regular-expression-matching]
+* link:{package}/BestTimeToBuyAndSellStockIII.java[best-time-to-buy-and-sell-stock-iii]
 
 | Greedy
 a|
