--- a/README.adoc
+++ b/README.adoc
@@ -269,6 +269,7 @@ a|
 |
 a|
 * link:{package}/EvaluateDivision.java[evaluate-division]
+* link:{package}/CourseSchedule.java[course-schedule]
 |
 
 | UnionFind
@@ -392,6 +393,7 @@ a|
 * link:{package}/SumRootToLeafNumbers.java[sum-root-to-leaf-numbers]
 * link:{package}/BinaryTreeRightSideView.java[binary-tree-right-side-view]
 * link:{package}/NumberOfProvinces.java[number-of-provinces]
+* link:{package}/CourseSchedule.java[course-schedule]
 |
 
 | BreadthFirstSearch
@@ -403,6 +405,7 @@ a|
 * link:{package}/BinaryTreeLevelOrderTraversal.java[binary-tree-level-order-traversal]
 * link:{package}/BinaryTreeZigzagLevelOrderTraversal.java[binary-tree-zigzag-level-order-traversal]
 * link:{package}/BinaryTreeRightSideView.java[binary-tree-right-side-view]
+* link:{package}/CourseSchedule.java[course-schedule]
 |
 
 | SlidingWindow
