--- a/README.adoc
+++ b/README.adoc
@@ -42,6 +42,7 @@ a|
 * link:{package}/CanPlaceFlowers.java[can-place-flowers]
 * link:{package}/FibonacciNumber.java[fibonacci-number]
 * link:{package}/PositionsOfLargeGroups.java[positions-of-large-groups]
+* link:{package}/BinaryPrefixDivisibleBy5.java[binary-prefix-divisible-by-5]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
