--- a/README.adoc
+++ b/README.adoc
@@ -284,7 +284,8 @@ a|
 * link:{package}/SmallestStringWithSwaps.java[smallest-string-with-swaps]
 * link:{package}/RedundantConnection.java[redundant-connection]
 * link:{package}/MostStonesRemovedWithSameRowOrColumn.java[most-stones-removed-with-same-row-or-column]
-|
+a|
+* link:{package}/BricksFallingWhenHit.java[bricks-falling-when-hit]
 
 | Sort
 |
