:sparkles: maximum-product-of-three-numbers

--- a/README.adoc
+++ b/README.adoc
@@ -44,6 +44,7 @@ a|
 * link:{package}/PositionsOfLargeGroups.java[positions-of-large-groups]
 * link:{package}/BinaryPrefixDivisibleBy5.java[binary-prefix-divisible-by-5]
 * link:{package}/CheckIfItIsAStraightLine.java[check-if-it-is-a-straight-line]
+* link:{package}/MaximumProductOfThreeNumbers.java[maximum-product-of-three-numbers]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
@@ -157,6 +158,7 @@ a|
 * link:{package}/PowerOfThree.java[power-of-three]
 * link:{package}/ValidPerfectSquare.java[valid-perfect-square]
 * link:{package}/CheckIfItIsAStraightLine.java[check-if-it-is-a-straight-line]
+* link:{package}/MaximumProductOfThreeNumbers.java[maximum-product-of-three-numbers]
 a|
 * link:{package}/StringToIntegerAtoi.java[string-to-integer-atoi]
 * link:{package}/IntegerToRoman.java[integer-to-roman]
