--- a/README.adoc
+++ b/README.adoc
@@ -45,6 +45,7 @@ a|
 * link:{package}/BinaryPrefixDivisibleBy5.java[binary-prefix-divisible-by-5]
 * link:{package}/CheckIfItIsAStraightLine.java[check-if-it-is-a-straight-line]
 * link:{package}/MaximumProductOfThreeNumbers.java[maximum-product-of-three-numbers]
+* link:{package}/AddToArrayFormOfInteger.java[add-to-array-form-of-integer]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
