--- a/README.adoc
+++ b/README.adoc
@@ -47,6 +47,7 @@ a|
 * link:{package}/MaximumProductOfThreeNumbers.java[maximum-product-of-three-numbers]
 * link:{package}/AddToArrayFormOfInteger.java[add-to-array-form-of-integer]
 * link:{package}/LongestContinuousIncreasingSubsequence.java[longest-continuous-increasing-subsequence]
+* link:{package}/NumberOfEquivalentDominoPairs.java[number-of-equivalent-domino-pairs]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
