--- a/README.adoc
+++ b/README.adoc
@@ -48,6 +48,7 @@ a|
 * link:{package}/AddToArrayFormOfInteger.java[add-to-array-form-of-integer]
 * link:{package}/LongestContinuousIncreasingSubsequence.java[longest-continuous-increasing-subsequence]
 * link:{package}/NumberOfEquivalentDominoPairs.java[number-of-equivalent-domino-pairs]
+* link:{package}/FindPivotIndex.java[find-pivot-index]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
