--- a/README.adoc
+++ b/README.adoc
@@ -285,6 +285,7 @@ a|
 a|
 * link:{package}/SortItemsByGroupsRespectingDependencies.java[sort-items-by-groups-respecting-dependencies]
 * link:{package}/RegionsCutBySlashes.java[regions-cut-by-slashes]
+* link:{package}/SimilarStringGroups.java[similar-string-groups]
 
 | UnionFind
 |
@@ -304,6 +305,7 @@ a|
 * link:{package}/RegionsCutBySlashes.java[regions-cut-by-slashes]
 * link:{package}/RemoveMaxNumberOfEdgesToKeepGraphFullyTraversable.java[remove-max-number-of-edges-to-keep-graph-fully-traversable]
 * link:{package}/SwimInRisingWater.java[swim-in-rising-water]
+* link:{package}/SimilarStringGroups.java[similar-string-groups]
 
 | Sort
 |
@@ -424,6 +426,7 @@ a|
 a|
 * link:{package}/SortItemsByGroupsRespectingDependencies.java[sort-items-by-groups-respecting-dependencies]
 * link:{package}/SwimInRisingWater.java[swim-in-rising-water]
+* link:{package}/SimilarStringGroups.java[similar-string-groups]
 
 | BreadthFirstSearch
 a|
