:sparkles: maximum-average-subarray-i

--- a/README.adoc
+++ b/README.adoc
@@ -50,6 +50,7 @@ a|
 * link:{package}/NumberOfEquivalentDominoPairs.java[number-of-equivalent-domino-pairs]
 * link:{package}/FindPivotIndex.java[find-pivot-index]
 * link:{package}/FairCandySwap.java[fair-candy-swap]
+* link:{package}/MaximumAverageSubarrayI.java[maximum-average-subarray-i]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
