--- a/README.adoc
+++ b/README.adoc
@@ -51,6 +51,7 @@ a|
 * link:{package}/FindPivotIndex.java[find-pivot-index]
 * link:{package}/FairCandySwap.java[fair-candy-swap]
 * link:{package}/MaximumAverageSubarrayI.java[maximum-average-subarray-i]
+* link:{package}/NonDecreasingArray.java[non-decreasing-array]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
